--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nqsang445/viettel_dev.git"
+    "url": "git+https://github.com/nqsang445/nodejs_nln"
   },
   "keywords": [
     "nqsang",
