--- a/package.json
+++ b/package.json
@@ -24,16 +24,14 @@
   "homepage": "https://github.com/nqsang445/nodejs_nln#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dialog-node": "^0.2.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.14"
-  },
-  "devDependencies": {
-    "dialog-node": "^0.2.1",
+    "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
